# yargi-mcp

./: .env.example  .gitignore  Dockerfile  README.md  __main__.py  asgi_app.py  docker-compose.yml  fastapi_app.py  install.bat  install.py  install.sh  mcp_server_main.py  nginx.conf  pyproject.toml  railway.json  requirements.txt  run_asgi.py  starlette_app.py
anayasa_mcp_module/: bireysel_client.py  client.py  models.py
bedesten_mcp_module/: __init__.py  client.py  models.py
danistay_mcp_module/: client.py  models.py
docs/: DEPLOYMENT.md
emsal_mcp_module/: client.py  models.py
kik_mcp_module/: client.py  models.py
rekabet_mcp_module/: client.py  models.py
uyusmazlik_mcp_module/: client.py  models.py
yargitay_mcp_module/: client.py  models.py
