[project]
name = "yargi-mcp"
version = "0.1.0"
description = "MCP Server For Turkish Legal Databases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastmcp>=2.2.10",
    "httpx>=0.28.1",
    "markitdown>=0.1.1",
    "pydantic>=2.11.4",
    "aiohttp>=3.11.18",
]
[tool.setuptools.packages.find]
include = ["*_mcp_module"]