[project]
name = "yargi-mcp"
version = "0.1.0"
description = "MCP Server For Turkish Legal Databases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "markitdown>=0.1.1",
    "pydantic>=2.11.4",
    "aiohttp>=3.11.18",
    "playwright>=1.52.0",
    "fastmcp>=2.5.1",
]

[project.scripts]
yargi-mcp = "mcp_server_main:main"

[tool.setuptools]
py-modules = ["mcp_server_main"]

[tool.setuptools.packages.find]
include = ["*_mcp_module"]
