[project]
name = "yargi-mcp"
version = "0.1.0"
description = "MCP Server For Turkish Legal Databases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "markitdown[pdf]>=0.1.1",
    "pydantic>=2.11.4",
    "aiohttp>=3.11.18",
    "playwright>=1.52.0",
    "fastmcp>=2.9.2",
    "pypdf>=5.5.0",
    "fastapi>=0.115.14",
]

[project.optional-dependencies]
asgi = [
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.37.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
production = [
    "gunicorn>=22.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
yargi-mcp = "mcp_server_main:main"

[tool.setuptools]
py-modules = ["mcp_server_main"]

[tool.setuptools.packages.find]
include = ["*_mcp_module"]
